fix wrong width of Reboot check box on Provision tab

--- a/Server/assets/system.less
+++ b/Server/assets/system.less
@@ -34,7 +34,7 @@
 }
 
 .system-provision {
-    input, select {
+    .install-options input {
         .input-xlarge;
     }
 }
